@@ -6,14 +6,21 @@ import harvestLog.dto.HarvestSummaryResponse;
 import harvestLog.model.Crop;
 import harvestLog.model.Farmer;
 import harvestLog.model.Category;
+import harvestLog.model.MeasureUnit;
+import harvestLog.repository.CategoryRepository;
 import harvestLog.repository.CropRepository;
 import harvestLog.repository.FarmerRepository;
+import harvestLog.repository.MeasureUnitRepository;
 import harvestLog.service.ICropService;
 import harvestLog.service.ICategoryService;
+import harvestLog.service.ai.CategoryAiService;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -23,18 +30,31 @@ public class CropService implements ICropService {
     private final CropRepository cropRepo;
     private final FarmerRepository farmerRepo;
     private final ICategoryService categoryService;
+    private final MeasureUnitRepository measureUnitRepo;
+    private final CategoryRepository categoryRepo;
+    private final CategoryAiService categoryAiService;
 
-    public CropService(CropRepository cropRepo, FarmerRepository farmerRepo, ICategoryService categoryService) {
+    public CropService(
+            CropRepository cropRepo,
+            FarmerRepository farmerRepo,
+            ICategoryService categoryService,
+            MeasureUnitRepository measureUnitRepo,
+            CategoryRepository categoryRepo,
+            CategoryAiService categoryAiService
+    ) {
         this.cropRepo = cropRepo;
         this.farmerRepo = farmerRepo;
         this.categoryService = categoryService;
+        this.measureUnitRepo = measureUnitRepo;
+        this.categoryRepo = categoryRepo;
+        this.categoryAiService = categoryAiService;
     }
 
     @Override
     public List<CropResponse> getAll(Long farmerId) {
         return cropRepo.findByFarmerId(farmerId).stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -55,11 +75,103 @@ public class CropService implements ICropService {
     @Override
     @Transactional
     public List<CropResponse> createBatch(List<CropRequest> requests, Long farmerId) {
-        List<Crop> crops = requests.stream()
-                .map(req -> toEntity(req, farmerId))
-                .collect(Collectors.toList());
+        // load categories once for performance
+        List<Category> existingCats = categoryRepo.findByFarmerId(farmerId, Sort.by("name"));
+        Map<Long, Category> categoriesById = existingCats.stream()
+                .collect(Collectors.toMap(Category::getId, c -> c));
+
+        List<String> existingNames = existingCats.stream()
+                .map(Category::getName)
+                .toList();
+
+        // per-crop meta
+        final class PerCropMeta {
+            Long assignedCategoryId;
+            String assignedCategoryName;
+            boolean resolved;
+            String suggestion;
+        }
+
+        List<PerCropMeta> metas = new ArrayList<>(requests.size());
+        List<Crop> crops = new ArrayList<>(requests.size());
+        List<Integer> aiIndices = new ArrayList<>();
+        List<String> namesForAi = new ArrayList<>();
+
+        for (int i = 0; i < requests.size(); i++) {
+            CropRequest req = requests.get(i);
+            PerCropMeta meta = new PerCropMeta();
+            metas.add(meta);
+
+            Crop crop = toEntityWithoutCategory(req, farmerId);
+
+            if (req.categoryId() != null) {
+                Category cat = categoriesById.get(req.categoryId());
+                if (cat != null) {
+                    crop.setCategory(cat);
+                    meta.assignedCategoryId = cat.getId();
+                    meta.assignedCategoryName = cat.getName();
+                    meta.resolved = true;
+                }
+            }
+
+            if (!meta.resolved) {
+                aiIndices.add(i);
+                namesForAi.add(req.name());
+            }
+
+            crops.add(crop);
+        }
+
+        // batch AI call for unresolved crops
+        if (!namesForAi.isEmpty()) {
+            List<CategoryAiService.SuggestionResult> aiResults =
+                    categoryAiService.suggestForBatch(namesForAi, existingNames);
+
+            for (int j = 0; j < aiResults.size(); j++) {
+                int origIndex = aiIndices.get(j);
+                PerCropMeta meta = metas.get(origIndex);
+                CategoryAiService.SuggestionResult r = aiResults.get(j);
+
+                if (r == null) continue;
+
+                if (r.matchedExisting != null) {
+                    String chosen = r.matchedExisting.trim();
+                    Category matched = existingCats.stream()
+                            .filter(c -> c.getName().equalsIgnoreCase(chosen))
+                            .findFirst()
+                            .orElse(null);
+                    if (matched != null) {
+                        crops.get(origIndex).setCategory(matched);
+                        meta.assignedCategoryId = matched.getId();
+                        meta.assignedCategoryName = matched.getName();
+                        meta.resolved = true;
+                    } else {
+                        meta.suggestion = chosen;
+                    }
+                } else if (r.suggestion != null && !r.suggestion.isBlank()) {
+                    meta.suggestion = r.suggestion.trim();
+                }
+            }
+        }
+
         List<Crop> saved = cropRepo.saveAll(crops);
-        return saved.stream().map(this::toResponse).toList();
+
+        List<CropResponse> responses = new ArrayList<>(saved.size());
+        for (int i = 0; i < saved.size(); i++) {
+            Crop s = saved.get(i);
+            PerCropMeta m = metas.get(i);
+
+            responses.add(new CropResponse(
+                    s.getId(),
+                    s.getName(),
+                    s.getMeasureUnit() != null ? s.getMeasureUnit().getId() : null,
+                    s.getCategory() != null ? s.getCategory().getId() : m.assignedCategoryId,
+                    s.getCategory() != null ? s.getCategory().getName() : m.assignedCategoryName,
+                    m.resolved,
+                    m.suggestion
+            ));
+        }
+        return responses;
     }
 
     @Override
@@ -69,9 +181,13 @@ public class CropService implements ICropService {
                 .filter(c -> c.getFarmer().getId().equals(farmerId))
                 .map(c -> {
                     c.setName(request.name());
-                    if (request.categoryName() != null) {
-                        Category cat = categoryService.getOrCreateActiveByName(request.categoryName(), farmerId);
+                    if (request.categoryId() != null) {
+                        Category cat = categoryRepo.findById(request.categoryId())
+                                .orElseThrow(() -> new IllegalArgumentException(
+                                        "Category not found: " + request.categoryId()));
                         c.setCategory(cat);
+                    } else {
+                        c.setCategory(null);
                     }
                     return toResponse(cropRepo.save(c));
                 });
@@ -89,56 +205,49 @@ public class CropService implements ICropService {
                 .orElse(false);
     }
 
-    @Override
-    public List<HarvestSummaryResponse> getHarvestsByCrop(Long cropId, Long farmerId) {
-        // TODO implement via harvestRepository if needed
-        throw new UnsupportedOperationException("Not implemented yet");
-    }
+    // ===== Mapping helpers =====
 
-    @Override
-    public List<CropResponse> searchByCategoryName(String categoryName, Long farmerId) {
-        return cropRepo.findByCategoryNameIgnoreCaseAndFarmerId(categoryName, farmerId).stream()
-                .map(this::toResponse)
-                .toList();
-    }
-
-    @Override
-    public Optional<List<CropResponse>> findByNameContains(String substring, Long farmerId) {
-        List<CropResponse> results = cropRepo.findByNameContainingIgnoreCaseAndFarmerId(substring, farmerId).stream()
-                .map(this::toResponse)
-                .toList();
-        return results.isEmpty() ? Optional.empty() : Optional.of(results);
-    }
-
-    // ============================
-    // Mapping helpers
-    // ============================
     private Crop toEntity(CropRequest request, Long farmerId) {
-        Farmer farmer = farmerRepo.findById(farmerId)
-                .orElseThrow(() -> new IllegalArgumentException("Farmer not found: " + farmerId));
-        Crop crop = new Crop();
-        crop.setName(request.name());
-        crop.setFarmer(farmer);
+        Crop crop = toEntityWithoutCategory(request, farmerId);
 
-        if (request.categoryName() != null) {
-            Category category = categoryService.getOrCreateActiveByName(request.categoryName(), farmerId);
-            crop.setCategory(category);
+        if (request.categoryId() != null) {
+            Category cat = categoryRepo.findById(request.categoryId())
+                    .orElseThrow(() -> new IllegalArgumentException(
+                            "Category not found: " + request.categoryId()));
+            crop.setCategory(cat);
         }
         return crop;
     }
 
-    private CropResponse toResponse(Crop crop) {
-        Long measureUnitId = crop.getMeasureUnit() != null ? crop.getMeasureUnit().getId() : null;
-        Long categoryId = crop.getCategory() != null ? crop.getCategory().getId() : null;
-        String categoryName = crop.getCategory() != null ? crop.getCategory().getName() : null;
+    /** Helper used in batch creation, skips category resolution. */
+    private Crop toEntityWithoutCategory(CropRequest request, Long farmerId) {
+        Farmer farmer = farmerRepo.findById(farmerId)
+                .orElseThrow(() -> new IllegalArgumentException("Farmer not found: " + farmerId));
 
+        Crop crop = new Crop();
+        crop.setName(request.name());
+        crop.setFarmer(farmer);
+
+        if (request.measureUnitId() == null) {
+            throw new IllegalArgumentException("measureUnitId is required for crop: " + request.name());
+        }
+        MeasureUnit mu = measureUnitRepo.findById(request.measureUnitId())
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "Measure unit not found: " + request.measureUnitId()));
+        crop.setMeasureUnit(mu);
+
+        return crop;
+    }
+
+    private CropResponse toResponse(Crop crop) {
         return new CropResponse(
                 crop.getId(),
                 crop.getName(),
-                measureUnitId,
-                categoryId,
-                categoryName
+                crop.getMeasureUnit() != null ? crop.getMeasureUnit().getId() : null,
+                crop.getCategory() != null ? crop.getCategory().getId() : null,
+                crop.getCategory() != null ? crop.getCategory().getName() : null,
+                true,   // always resolved in normal reads
+                null
         );
     }
-
 }
